Added some text in info templates

--- a/simplesocial/templates/info.html
+++ b/simplesocial/templates/info.html
@@ -13,6 +13,6 @@
         <li>User will be able to post text on website after joining the group</li>
         <li>The post and groups will be displyed on by clicking groups icon</li>
     </ul>
-    <h2>Thank for Visiting the Website</h2>
+    <h2>Thank you for Visiting the Website</h2>
 </div>
 {% endblock %}
